Avoid page breaks in blockquotes and pre blocks

--- a/themes/default/stylesheets/styles.css
+++ b/themes/default/stylesheets/styles.css
@@ -306,10 +306,15 @@ footer ul {
     color:#444;
   }
 
+  blockquote {
+    page-break-inside:avoid;
+  }
+
   table.pre {
     width:auto;
     border:#ddd 2px dotted;
     -webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;
+    page-break-inside:avoid;
   }
 
   table.pre pre, table.pre code, table.pre span {
